--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -1,11 +1,14 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-left: 20vw;
     background-color: rgb(60, 58, 63);
+    /* background-color: aqua; */
     height: 100%;
     min-height: 100vh;
     width: 80vw;
+
+
 }
