--- a/src/components/cardWeb/CardWeb.module.css
+++ b/src/components/cardWeb/CardWeb.module.css
@@ -23,14 +23,19 @@
 .detailContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
-    /* align-items: center; */
     color: white;
-    /* min-width: 200px; */
-    /* background-color: green; */
 }
 
 .icons {
+    transition: 0.15s;
+    width: 128px;
+    height: 128px;
+}
+
+.iconsDisabled {
+    opacity: 0.1;
     transition: 0.15s;
     width: 128px;
     height: 128px;
@@ -49,4 +54,10 @@
     margin-left: 10px;
     height: 400px;
     width: 711px;
+    border-radius: 10px;
+}
+
+.decoration {
+    color: white;
+    text-decoration: none;
 }
