--- a/src/components/cardMobile/CardMobile.module.css
+++ b/src/components/cardMobile/CardMobile.module.css
@@ -37,19 +37,21 @@
 .detailContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    /* justify-content: space-between; */
     align-items: center;
     color: white;
-    width: 100%;
+    width: 90%;
+    /* width: 100%; */
 }
 
-.detailContainerText {
+.detailContainerGit {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     color: white;
-    width: 100%;
+    /* width: 100%; */
+    /* background-color: aqua; */
 }
 
 .decoration {
@@ -63,13 +65,6 @@
     height: 64px;
 }
 
-.iconsDisabled {
-    opacity: 0.1;
-    transition: 0.15s;
-    width: 64px;
-    height: 64px;
-}
-
 .icons:hover {
     cursor: pointer;
     /* color: rgb(202, 202, 202); */
@@ -77,4 +72,12 @@
     scale: 0.96;
     opacity: 0.7;
     color: blueviolet;
+}
+
+.title {
+    display: flex;
+    width: 100%;
+    /* background-color: blueviolet; */
+    justify-content: center;
+    align-items: center;
 }
