--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -38,14 +38,34 @@
     box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.6);
 }
 
-.iconMobile {
+.containerIcon {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* background-color: aqua; */
+}
+
+.iconIndicator {
+    display: flex;
+    align-self: center;
+    background-color: blueviolet;
+    height: 4px;
+    width: 80px;
+    border-radius: 10px;
+    margin-top: 25px;
+    box-shadow: 0px 0px 50px 10px rgba(138, 43, 226, 0.3);
+    border: 3px solid blueviolet;
+}
+
+.icon {
     /* background-color: red; */
     /* width: 70px; */
+    min-height: 80px;
     height: 100px;
     transition: 0.2s;
 }
 
-.iconMobile:hover {
+.icon:hover {
     cursor: pointer;
     transition: 0.2s;
     scale: 1.3;
@@ -53,17 +73,18 @@
 }
 
 .mobileWebContainer {
-    box-shadow: inset 0px 10px 15px -1px rgba(0, 0, 0, 0.8);
-    border-radius: 20px;
-    border: 1px solid white;
-    padding: 30px 0px;
-    margin-top: 50px;
+    /* box-shadow: inset 0px 10px 15px -1px rgba(0, 0, 0, 0.8); */
+    /* border-radius: 20px; */
+    /* border: 1px solid white; */
+    /* padding: 30px 0px; */
+    margin-top: 70px;
+    margin-bottom: 70px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     transition: 0.1s;
-    background-color: white;
-    color: black;
+    /* background-color: white; */
+    /* color: black; */
 }
 
 .textWebMobile {
