--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -105,4 +105,7 @@
     color: white;
     margin-bottom: 40px;
     font-size: 25px;
+    font-family: 'Anton', sans-serif;
+    /* font-family: 'Castoro Titling', cursive; */
+    /* font-family: 'Bruno Ace SC', cursive; */
 }
