--- a/src/components/cardMobile/CardMobile.module.css
+++ b/src/components/cardMobile/CardMobile.module.css
@@ -5,7 +5,7 @@
     /* height: auto; */
     /* flex: 1; */
     /* min-width: 830px; */
-
+    /* position: absolute; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,12 +27,71 @@
     box-shadow: 0px 0px 50px 10px rgba(138, 43, 226, 0.3);
 }
 
-.video {
 
+
+.qrContainer {
+    display: flex;
+    position: absolute;
+    border-radius: 10px;
     width: 340px;
     height: 680px;
-    border-radius: 10px;
+    flex-direction: column;
+    z-index: 2;
+    justify-content: space-around;
+    align-items: center;
+    opacity: 0;
+    /* background-color: aqua; */
+    transition: 0.5s;
 }
+
+.qrContainer:hover {
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.qrContainer:hover+.video {
+    /* z-index: 3; */
+    opacity: 0.2;
+    transition: 0.5s;
+}
+
+.qrCard {
+    display: flex;
+    justify-content: center;
+}
+
+.qr {
+    /* flex: 1; */
+    width: 310px;
+    height: 310px;
+    /* position: absolute; */
+}
+
+.textQR {
+    display: flex;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    /* padding-top: 1px; */
+    font-size: 19px;
+    /* font-weight: bold; */
+    /* background-color: blueviolet; */
+}
+
+.video {
+    display: flex;
+    position: relative;
+    border-radius: 10px;
+    width: 340px;
+    height: 680px;
+    z-index: 1;
+    transition: 2s;
+}
+
+/* .video:hover {
+    z-index: 1;
+    transition: 1s;
+} */
 
 .detailContainer {
     display: flex;
