--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -1,14 +1,33 @@
 .container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin-left: 20vw;
     background-color: rgb(60, 58, 63);
     /* background-color: aqua; */
     height: 100%;
     min-height: 100vh;
     width: 80vw;
+}
 
+.containerDevices {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.textInstruccion {
+    padding: 0;
+    margin: 0;
+    font-size: 28px;
+    color: white;
+    text-shadow: 0px 0px 20px rgb(0, 0, 0);
+}
+
+.spanSlash {
+    color: blueviolet;
+    font-size: 38px;
+    font-weight: bold;
+    /* border: blueviolet solid 3px; */
+    /* text-shadow: 0px 0px 2px rgba(138, 43, 226); */
 }
