--- a/src/components/cardMobile/CardMobile.module.css
+++ b/src/components/cardMobile/CardMobile.module.css
@@ -41,41 +41,62 @@
     align-items: center;
     opacity: 0;
     /* background-color: aqua; */
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .qrContainer:hover {
     opacity: 1;
-    transition: 0.5s;
-}
-
-.qrContainer:hover+.video {
-    /* z-index: 3; */
-    opacity: 0.2;
-    transition: 0.5s;
+    transition: 0.3s;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .qrCard {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    opacity: 0.30;
+}
+
+.qrCard:hover {
+    opacity: 1;
+}
+
+.qrCard:hover .qrNoScan {
+    opacity: 0;
+}
+
+/* .qrCard:hover .qrNoScan {
+    opacity: 0;
+} */
+
+.qrContainSinlge {
+    width: 280px;
+    height: 280px;
+}
+
+.qrNoScan {
+    width: 280px;
+    height: 280px;
+    position: absolute;
+    z-index: 1;
 }
 
 .qr {
-    /* flex: 1; */
-    width: 310px;
-    height: 310px;
-    /* position: absolute; */
+    width: 280px;
+    height: 280px;
+    position: absolute;
 }
 
 .textQR {
     display: flex;
-    position: absolute;
     padding: 0;
     margin: 0;
-    /* padding-top: 1px; */
-    font-size: 19px;
-    /* font-weight: bold; */
-    /* background-color: blueviolet; */
+    z-index: 2;
+    color: white;
+    text-shadow: 0px 0px 15px rgb(0, 0, 0);
+    font-size: 36px;
+    font-weight: bold;
 }
 
 .video {
@@ -85,7 +106,7 @@
     width: 340px;
     height: 680px;
     z-index: 1;
-    transition: 2s;
+    transition: 0.5s;
 }
 
 /* .video:hover {
