--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -10,6 +10,7 @@
 .img {
     margin: 5%;
     width: 90%;
+    overflow: hidden;
 }
 
 .detail {
@@ -92,6 +93,7 @@
     justify-content: center;
     font-size: 30px;
     font-weight: bold;
+    text-shadow: 0px 0px 20px rgb(0, 0, 0);
 }
 
 .decoration {
@@ -106,6 +108,7 @@
     margin-bottom: 40px;
     font-size: 25px;
     font-family: 'Anton', sans-serif;
+    text-shadow: 0px 0px 20px rgb(0, 0, 0);
     /* font-family: 'Castoro Titling', cursive; */
     /* font-family: 'Bruno Ace SC', cursive; */
 }
