--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -22,6 +22,7 @@
     font-size: 28px;
     color: white;
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
+    font-family: 'Anton', sans-serif;
 }
 
 .spanSlash {
