--- a/src/components/cardMobile/CardMobile.module.css
+++ b/src/components/cardMobile/CardMobile.module.css
@@ -97,6 +97,7 @@
     text-shadow: 0px 0px 15px rgb(0, 0, 0);
     font-size: 36px;
     font-weight: bold;
+    font-family: 'Anton', sans-serif;
 }
 
 .video {
@@ -122,6 +123,7 @@
     color: white;
     width: 90%;
     /* width: 100%; */
+    font-family: 'Anton', sans-serif;
 }
 
 .detailContainerGit {
@@ -155,6 +157,7 @@
 }
 
 .title {
+    font-size: 14px;
     display: flex;
     width: 100%;
     /* background-color: blueviolet; */
