--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -94,6 +94,7 @@
     font-size: 30px;
     font-weight: bold;
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
+    font-family: 'Anton', sans-serif;
 }
 
 .decoration {
