--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -19,15 +19,15 @@
 .textInstruccion {
     padding: 0;
     margin: 0;
-    font-size: 28px;
+    font-size: 26px;
     color: white;
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
     font-family: 'Anton', sans-serif;
 }
 
-.spanSlash {
+.spanText {
     color: blueviolet;
-    font-size: 38px;
+    font-size: 34px;
     font-weight: bold;
     /* border: blueviolet solid 3px; */
     /* text-shadow: 0px 0px 2px rgba(138, 43, 226); */
