--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -19,6 +19,7 @@
 .textInstruccion {
     padding: 0;
     margin: 0;
+    margin-top: 16px;
     font-size: 26px;
     color: white;
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
