--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,20 @@
 .container {
-    margin: 0;
     display: flex;
+    flex: 1;
+    height: max-content;
+    min-height: 100vh;
+    padding: 0px;
+    background-color: rgb(60, 58, 63);
+}
+
+@media (max-width: 950px) {
+    .container {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 650px) {
+    .container {
+        flex-direction: column;
+    }
 }
