--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -1,19 +1,20 @@
 .container {
     display: flex;
+    flex: 1;
     align-items: center;
     flex-direction: column;
-    margin-left: 20vw;
+    height: max-content;
+    padding-left: 20vw;
     background-color: rgb(60, 58, 63);
-    /* background-color: aqua; */
-    height: 100%;
-    min-height: 100vh;
-    width: 80vw;
+    overflow: auto;
+    transition: 0.2s;
 }
 
 .containerDevices {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    width: auto;
 }
 
 .textInstruccion {
@@ -30,6 +31,24 @@
     color: blueviolet;
     font-size: 34px;
     font-weight: bold;
-    /* border: blueviolet solid 3px; */
-    /* text-shadow: 0px 0px 2px rgba(138, 43, 226); */
+}
+
+@media (max-width: 950px) {
+    .container {
+        position: relative;
+        flex: 1;
+        /* opacity: 1; */
+        height: max-content;
+        padding-left: 0vw;
+    }
+}
+
+@media (max-width: 650px) {
+    .container {
+        position: relative;
+        opacity: 1;
+        width: 100%;
+        height: max-content;
+        padding-left: 0vw;
+    }
 }
