--- a/src/components/cardListWeb/CardListWeb.module.css
+++ b/src/components/cardListWeb/CardListWeb.module.css
@@ -3,9 +3,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 20vw;
-    background-color: rgb(60, 58, 63);
+    padding-left: 20vw;
     height: 100%;
-    min-height: 100vh;
-    width: 80vw;
+    width: 100%;
+    overflow: hidden;
+    transition: 0.2s;
 }
+
+@media (max-width: 950px) {
+    .container {
+        padding-left: 0vw;
+        width: 100%;
+        transition: 0.2s;
+    }
+}
+
+@media (max-width: 650px) {}
