--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -1,34 +1,57 @@
 .container {
+    display: flex;
+    /* padding: 100px; */
+    flex-direction: column;
     position: fixed;
     background-color: rgb(47, 47, 47);
     height: 100vh;
     width: 20vw;
-    min-width: 150px;
+    /* padding: 1vw; */
+    /* flex: 1; */
+    /* min-width: 140px; */
     box-shadow: 10px 0px 80px 5px rgba(0, 0, 0, 0.4);
+    transition: 0.5s;
+    /* background-color: red; */
 }
 
 .img {
-    margin: 5%;
-    width: 90%;
-    overflow: hidden;
+    display: flex;
+    padding: 2%;
+    width: 96%;
+    transition: 0.5s;
+    /* flex-direction: column; */
+    /* flex: 1; */
+    /* height: fit-content; */
+    /* padding: 5%; */
+    /* width: 100%; */
+    /* height: ; */
+    /* overflow: hidden; */
 }
 
 .detail {
-    color: azure;
     display: flex;
+    flex: 1;
+    color: azure;
     flex-direction: column;
+    justify-content: space-around;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .socialMediaContainer {
     display: flex;
     justify-content: space-around;
     transition: 0.1s;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 .socialMediaIcon {
     transition: 0.1s;
-    width: 36px;
-    height: 36px;
+    width: 100%;
+    height: 100%;
+    /* background-color: aqua; */
 }
 
 .socialMediaIcon:hover {
@@ -42,6 +65,9 @@
 .containerIcon {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
     /* align-items: center; */
     /* background-color: aqua; */
 }
@@ -51,7 +77,7 @@
     align-self: center;
     background-color: blueviolet;
     height: 4px;
-    width: 80px;
+    width: 60%;
     border-radius: 10px;
     margin-top: 25px;
     box-shadow: 0px 0px 50px 10px rgba(138, 43, 226, 0.3);
@@ -59,10 +85,8 @@
 }
 
 .icon {
-    /* background-color: red; */
-    /* width: 70px; */
-    min-height: 80px;
-    height: 100px;
+    display: flex;
+    width: 90%;
     transition: 0.2s;
 }
 
@@ -70,34 +94,29 @@
     cursor: pointer;
     transition: 0.2s;
     scale: 1.3;
-    /* box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.6); */
 }
 
 .mobileWebContainer {
-    /* box-shadow: inset 0px 10px 15px -1px rgba(0, 0, 0, 0.8); */
-    /* border-radius: 20px; */
-    /* border: 1px solid white; */
-    /* padding: 30px 0px; */
-    margin-top: 70px;
-    margin-bottom: 70px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     transition: 0.1s;
-    /* background-color: white; */
-    /* color: black; */
 }
 
 .textWebMobile {
     display: flex;
+    text-align: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 32px;
     font-weight: bold;
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
     font-family: 'Anton', sans-serif;
+    transition: 0.9s;
 }
 
 .decoration {
+    display: flex;
+    flex: 1;
     color: white;
     text-decoration: none;
 }
@@ -105,11 +124,69 @@
 .textName {
     display: flex;
     justify-content: center;
+    text-align: center;
     color: white;
-    margin-bottom: 40px;
-    font-size: 25px;
+    font-size: 32px;
     font-family: 'Anton', sans-serif;
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
-    /* font-family: 'Castoro Titling', cursive; */
-    /* font-family: 'Bruno Ace SC', cursive; */
+    transition: 0.9s;
+}
+
+@media (max-width: 1600px) {
+    .textName {
+        font-size: 26px;
+        transition: 0.9s;
+    }
+}
+
+@media (max-width: 1300px) {
+    .textName {
+        font-size: 22px;
+        transition: 0.9s;
+    }
+}
+
+@media (max-width: 1150px) {
+    .textName {
+        font-size: 18px;
+        transition: 0.9s;
+    }
+}
+
+@media (max-width: 950px) {
+    .container {
+        flex-direction: row;
+        position: relative;
+        width: 100%;
+        height: max-content;
+        transition: 0.5s;
+    }
+
+    .img {
+        justify-self: center;
+        align-self: center;
+        width: 50%;
+        transition: 0.5s;
+        height: min-content;
+    }
+
+    .textName {
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 650px) {
+    .container {
+        flex-direction: column;
+        position: relative;
+        opacity: 1;
+        width: 100%;
+        height: max-content;
+        transition: 0.5s;
+    }
+
+    .img {
+        width: 96%;
+        transition: 0.5s;
+    }
 }
