--- a/src/components/cardListMobile/CardListMobile.module.css
+++ b/src/components/cardListMobile/CardListMobile.module.css
@@ -8,47 +8,129 @@
     background-color: rgb(60, 58, 63);
     overflow: auto;
     transition: 0.2s;
+    /* background-color: aqua; */
 }
 
 .containerDevices {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
-    width: auto;
+    /* width: auto; */
+    /* background-color: beige; */
 }
 
-.textInstruccion {
-    padding: 0;
-    margin: 0;
-    margin-top: 16px;
-    font-size: 26px;
+.containerInstruccion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 90vh;
+    width: 100%;
     color: white;
+    /* margin-top: 32px; */
+    /* font-size: 26px; */
     text-shadow: 0px 0px 20px rgb(0, 0, 0);
     font-family: 'Anton', sans-serif;
+    /* background-color: aqua; */
 }
 
-.spanText {
-    color: blueviolet;
-    font-size: 34px;
+.buttonsContainer {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.buttonContainer {
+    /* font-family: 'Anton', sans-serif; */
+    text-align: center;
+    justify-content: center;
+    border-radius: 100px;
+    box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+    /* font-size: 60px; */
+    /* width: 200px; */
+    padding: 20px;
+    background-color: rgb(80, 80, 80);
+}
+
+.buttonContainer:visited {
+    color: white;
+}
+
+.buttonContainer:link {
+    color: white;
+}
+
+.buttonContainer:hover {
+    box-shadow: 0px 0px 50px 10px rgba(138, 43, 226, 0.3);
+    cursor: pointer;
+}
+
+.buttonContainer:hover .iconButton {
+    color: rgb(180, 100, 255);
+}
+
+.iconButton {
+    height: 140px;
+    width: 140px;
+}
+
+
+
+
+
+.textTitle {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 60px;
+    padding: 0px;
+    margin: 0px;
     font-weight: bold;
+    /* width: max-content; */
+}
+
+
+.arrowContainer {
+    display: flex;
+    bottom: 20px;
+}
+
+.arrow {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-bottom: 10px solid white;
+    border-right: 10px solid white;
+    transform: rotate(0deg);
+    animation: bounce 0.8s infinite alternate;
+}
+
+@keyframes bounce {
+    from {
+        transform: rotate(45deg) translateY(0) translateX(0);
+    }
+
+    to {
+        transform: rotate(45deg) translateY(-40px) translateX(-40px);
+    }
 }
 
 @media (max-width: 950px) {
     .container {
-        position: relative;
-        flex: 1;
-        /* opacity: 1; */
-        height: max-content;
+        transition: 0.2;
         padding-left: 0vw;
     }
 }
 
 @media (max-width: 650px) {
-    .container {
-        position: relative;
-        opacity: 1;
-        width: 100%;
-        height: max-content;
-        padding-left: 0vw;
+    .textTitle {
+        transition: 0.2s;
+        font-size: 40px;
+    }
+
+    .iconButton {
+        transition: 0.2s;
+        width: 90px;
+        height: 90px;
     }
 }
