--- a/src/components/cardMobile/CardMobile.module.css
+++ b/src/components/cardMobile/CardMobile.module.css
@@ -1,4 +1,14 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    align-items: center;
+    /* max-height: 90vh; */
+    /* background-color: green; */
+    max-width: 300px;
+}
+
+.containerScreen {
 
     /* max-width: 1200px; */
     /* width: 50%; */
@@ -7,55 +17,74 @@
     /* min-width: 830px; */
     /* position: absolute; */
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(47, 47, 47);
+    /* max-width: 300px; */
+    background-color: rgb(0, 0, 0);
     /* background-color: brown; */
-    margin: 22px;
-    padding: 15px;
+    padding: 10px;
     border-radius: 20px;
     border: rgb(192, 192, 192) solid 3px;
     overflow: hidden;
     box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
     transition: 0.15s;
+    /* background-color: aqua; */
 }
 
-.container:hover {
+.containerScreen:hover {
     transition: 0.15s;
     border: blueviolet solid 3px;
     box-shadow: 0px 0px 50px 10px rgba(138, 43, 226, 0.3);
+
 }
 
 
+.container:hover .title {
+    transition: 0.15s;
+    text-shadow: 0px 0px 20px rgba(138, 43, 226);
+}
 
-.qrContainer {
+
+.qrsContainer {
     display: flex;
     position: absolute;
-    border-radius: 10px;
-    width: 340px;
-    height: 680px;
+    flex: 1;
+    padding: 10%;
+    /* border-radius: 10px; */
+    /* width: 60vw; */
+    max-width: 100%;
+    /* height: 680px; */
     flex-direction: column;
     z-index: 2;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
+
+
     opacity: 0;
+
+
     /* background-color: aqua; */
     transition: 0.3s;
+    /* background-color: blue; */
 }
 
-.qrContainer:hover {
+.qrsContainer:hover {
     opacity: 1;
     transition: 0.3s;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .qrCard {
     display: flex;
+    position: relative;
+    /* flex: 1; */
+    width: 100%;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    opacity: 0.30;
+    /* justify-content: center; */
+    opacity: 0.1;
 }
 
 .qrCard:hover {
@@ -71,20 +100,25 @@
 } */
 
 .qrContainSinlge {
-    width: 280px;
-    height: 280px;
+    display: flex;
+    /* flex: 1; */
+    width: 100%;
+    /* height: 180px; */
+    background-color: aqua;
 }
 
 .qrNoScan {
-    width: 280px;
-    height: 280px;
-    position: absolute;
+    display: flex;
+    width: 100%;
+    /* height: 280px; */
+    /* position: absolute; */
     z-index: 1;
 }
 
 .qr {
-    width: 280px;
-    height: 280px;
+    display: flex;
+    width: 100%;
+    /* height: 280px; */
     position: absolute;
 }
 
@@ -104,8 +138,10 @@
     display: flex;
     position: relative;
     border-radius: 10px;
-    width: 340px;
-    height: 680px;
+    /* flex: 1; */
+    width: 100%;
+
+    /* height: 680px; */
     z-index: 1;
     transition: 0.5s;
 }
@@ -118,12 +154,14 @@
 .detailContainer {
     display: flex;
     flex-direction: row;
+    margin-top: 10px;
     /* justify-content: space-between; */
     align-items: center;
     color: white;
-    width: 90%;
+    width: 100%;
     /* width: 100%; */
     font-family: 'Anton', sans-serif;
+    /* background-color: beige; */
 }
 
 .detailContainerGit {
@@ -132,19 +170,36 @@
     justify-content: center;
     align-items: center;
     color: white;
-    /* width: 100%; */
-    /* background-color: aqua; */
+    /* height: 150px; */
+    width: 20%;
+    /* background-color: aquamarine; */
 }
 
 .decoration {
+    /* color: white;
+    text-decoration: none; */
+    display: flex;
+    width: 100%;
     color: white;
-    text-decoration: none;
+    border-radius: 50px;
+    /* margin: 50px; */
+    /* padding: 10px; */
+    align-items: center;
+    justify-content: center;
+    box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.2);
+    background-color: rgb(80, 80, 80);
+}
+
+.decoration:hover {
+    box-shadow: 0px 0px 50px 10px rgba(138, 43, 226, 0.3);
 }
 
 .icons {
-    transition: 0.15s;
-    width: 64px;
-    height: 64px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: 6px;
+    transition: 0.2s;
 }
 
 .icons:hover {
@@ -153,14 +208,33 @@
     transition: 0.15s;
     scale: 0.96;
     opacity: 0.7;
-    color: blueviolet;
+    color: rgb(180, 100, 255);
 }
 
 .title {
-    font-size: 14px;
+    font-size: 40px;
     display: flex;
     width: 100%;
+    padding: 0px;
+    margin: 0px;
+    padding-left: 10px;
     /* background-color: blueviolet; */
     justify-content: center;
-    align-items: center;
+    text-align: center;
+}
+
+@media (max-width: 650px) {
+    .qrsContainer {
+        padding: 15%;
+    }
+
+    .title {
+        font-size: 32px;
+    }
+}
+
+@media (max-width: 400px) {
+    .title {
+        font-size: 26px;
+    }
 }
