delete imports not used

--- a/src/components/cardWeb/CardWeb.module.css
+++ b/src/components/cardWeb/CardWeb.module.css
@@ -122,6 +122,10 @@
         margin-right: 5%;
     }
 
+    .containerImage {
+        padding: 6px;
+    }
+
     .name {
         transition: 0.2s;
         font-size: 20px;
