--- a/src/components/cardListWeb/CardListWeb.module.css
+++ b/src/components/cardListWeb/CardListWeb.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding-left: 20vw;
